--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# Hibernate
-hibernate.dialect: org.hibernate.dialect.HSQLDialect
-hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
-entitymanager.packagesToScan: uo.asw
-
 #Para cambiar de puerto
-server.port = 8080
+server.port = 8091
+
+spring.data.mongodb.database=agentsdb
+spring.data.mongodb.host=ds221339.mlab.com
+spring.data.mongodb.port=21339
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=asw
