--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 #Para cambiar de puerto
 server.port = 8091
 
-spring.data.mongodb.database=agentsdb
-spring.data.mongodb.host=ds221339.mlab.com
-spring.data.mongodb.port=21339
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=asw
+spring.data.mongodb.uri=mongodb://admin:asw@ds221339.mlab.com:21339/agentsdb
